--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>This is my GitHub Pages site.</p>
 
   <p>
-    <a href="https://github.com/YOUR_USERNAME">My GitHub</a>
+    <a href="https://github.com/thinks">My GitHub</a>
   </p>
 </body>
 </html>
