--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Home Page</title>
+  <title>Tommy Hinks</title>
 </head>
-<body>
+<body style="font-family:sans-serif; max-width:800px; margin:3rem auto;">
   <h1>Hello</h1>
   <p>This is my GitHub Pages site.</p>
 
   <p>
     <a href="https://github.com/thinks">My GitHub</a>
   </p>
+
+  <h2>Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
+  <img src="images/snow_feldman3.png"
+     style="max-width:100%; height:auto;">  
+  <p>
+    My master thesis focused on modeling snow buildup using implicit surfaces (more specifically level sets) by allowing snow to fall in a wind field. Level sets are propagated according to snow particle collisions, with constraints to mimic realistic buildup.
+  </p>
+  <h3>Abstract</h3>
+  <p>
+    We present a physically-based snow modeling approach that handles geometrically complex scenes and arbitrary amounts of accumulated snow. Scene objects are represented with a novel dual level set structure. This implicit surface representation produces smooth snow surfaces that adhere to granular stability constraints at every timestep. Realistic accumulation patterns are achieved by tracing snow-carrying particles in a dynamic wind-field and on the surfaces of objects. Local level set operations are used to deposit snow at surface locations for which accumulation is physically plausible. The effectiveness of our method is demonstrated by applying our method to a number of challenging scenes.
+  </p>
+
+
 </body>
 </html>
