--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <p>
     We present a physically-based snow modeling approach that handles geometrically complex scenes and arbitrary amounts of accumulated snow. Scene objects are represented with a novel dual level set structure. This implicit surface representation produces smooth snow surfaces that adhere to granular stability constraints at every timestep. Realistic accumulation patterns are achieved by tracing snow-carrying particles in a dynamic wind-field and on the surfaces of objects. Local level set operations are used to deposit snow at surface locations for which accumulation is physically plausible. The effectiveness of our method is demonstrated by applying our method to a number of challenging scenes.
   </p>
+  <p>
+    <a href="docs/tommyfinalthesis.pdf">Download thesis [.pdf]</a><br>
+    <a href="docs/eg09irl_snow.pdf">Download paper [.pdf]</a><br>
+  </p>
 
 
 </body>
