--- a/index.html
+++ b/index.html
@@ -27,6 +27,69 @@
     <a href="docs/eg09irl_snow.pdf">Download paper [.pdf]</a><br>
   </p>
 
+  <style>
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 16px;
+      max-width: 800px;
+      margin: 2rem auto;
+      text-align: center;
+      font-family: sans-serif;
+    }
+    .gallery img {
+      width: 100%;
+      max-width: 220px;
+      height: auto;
+      border-radius: 6px;
+    }
+    .caption {
+      margin-top: 6px;
+      font-size: 0.9rem;
+    }
+  </style>
+  <div class="gallery">
+    <div>
+      <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_bunny_060420a.jpg" alt="Image 1">
+      </a>
+      <div class="caption">Caption 1</div>
+    </div>
 
+    <div>
+      <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_bunny_060420b.jpg" alt="Image 2">
+      </a>
+      <div class="caption">Caption 2</div>
+    </div>
+
+    <div>
+      <a href="images/snow_bunny_060420c.jpg" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_bunny_060420c.jpg" alt="Image 3">
+      </a>
+      <div class="caption">Caption 3</div>
+    </div>
+
+    <div>
+      <a href="images/snow_buddha.png" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_buddha.png" alt="Image 5">
+      </a>
+      <div class="caption">Caption 5</div>
+    </div>
+
+    <div>
+      <a href="images/snow_feldman.png" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_feldman.png" alt="Image 4">
+      </a>
+      <div class="caption">Caption 4</div>
+    </div>
+
+    <div>
+      <a href="images/snow_lantern.jpg" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_lantern.jpg" alt="Image 6">
+      </a>
+      <div class="caption">Caption 6</div>
+    </div>
+  </div>
 </body>
 </html>
