--- a/index.html
+++ b/index.html
@@ -43,52 +43,43 @@
       height: auto;
       border-radius: 6px;
     }
-    .caption {
-      margin-top: 6px;
-      font-size: 0.9rem;
-    }
   </style>
   <div class="gallery">
     <div>
       <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_bunny_060420a.jpg" alt="Image 1">
+        <img src="images/snow_bunny_060420a.jpg" alt="">
       </a>
-      <div class="caption">Caption 1</div>
     </div>
 
     <div>
       <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_bunny_060420b.jpg" alt="Image 2">
+        <img src="images/snow_bunny_060420b.jpg" alt="">
       </a>
-      <div class="caption">Caption 2</div>
     </div>
 
     <div>
       <a href="images/snow_bunny_060420c.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_bunny_060420c.jpg" alt="Image 3">
+        <img src="images/snow_bunny_060420c.jpg" alt="">
       </a>
-      <div class="caption">Caption 3</div>
-    </div>
-
-    <div>
-      <a href="images/snow_buddha.png" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_buddha.png" alt="Image 5">
-      </a>
-      <div class="caption">Caption 5</div>
     </div>
 
     <div>
       <a href="images/snow_feldman.png" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_feldman.png" alt="Image 4">
+        <img src="images/snow_feldman.png" alt="">
       </a>
-      <div class="caption">Caption 4</div>
     </div>
 
     <div>
-      <a href="images/snow_lantern.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_lantern.jpg" alt="Image 6">
+      <a href="images/snow_buddha.png" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_buddha.png" alt="">
       </a>
-      <div class="caption">Caption 6</div>
+    </div>
+
+
+    <div>
+      <a href="images/snow_lantern.jpg" target="_blank" rel="noopener noreferrer">
+        <img src="images/snow_lantern.jpg" alt="">
+      </a>
     </div>
   </div>
 </body>
