--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@
   <p>
     My master thesis focused on modeling snow buildup using implicit surfaces (more specifically level sets) by allowing snow to fall in a wind field. Level sets are propagated according to snow particle collisions, with constraints to mimic realistic buildup.
   </p>
+  <p>
+    <a href="docs/tommyfinalthesis.pdf">Download thesis [.pdf]</a><br>
+  </p>  
   <h3>Abstract</h3>
   <p>
     We present a physically-based snow modeling approach that handles geometrically complex scenes and arbitrary amounts of accumulated snow. Scene objects are represented with a novel dual level set structure. This implicit surface representation produces smooth snow surfaces that adhere to granular stability constraints at every timestep. Realistic accumulation patterns are achieved by tracing snow-carrying particles in a dynamic wind-field and on the surfaces of objects. Local level set operations are used to deposit snow at surface locations for which accumulation is physically plausible. The effectiveness of our method is demonstrated by applying our method to a number of challenging scenes.
   </p>
+  <h3>Paper</h3>
   <p>
-    <a href="docs/tommyfinalthesis.pdf">Download thesis [.pdf]</a><br>
+    “Wind-Driven Snow Buildup Using a Level Set Approach”,<br> Best Presentation Award
+    <b>T. Hinks</b>, K. Museth,<br>
+    <i>Eurographics Ireland Workshop Series</i>, Vol. 9, December 2009, Dublin, Ireland, pp. 19-26.  
+  </p>
+  <p>
     <a href="docs/eg09irl_snow.pdf">Download paper [.pdf]</a><br>
+    <a href="docs/eg09irl_snow_pres.pdf">Download presentation [.pdf]</a> <b>Best presentation award!</b><br>
   </p>
 
   <style>
