--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   </p>
   <h3>Paper</h3>
   <p>
-    “Wind-Driven Snow Buildup Using a Level Set Approach”,<br> Best Presentation Award
+    “Wind-Driven Snow Buildup Using a Level Set Approach”,<br>
     <b>T. Hinks</b>, K. Museth,<br>
     <i>Eurographics Ireland Workshop Series</i>, Vol. 9, December 2009, Dublin, Ireland, pp. 19-26.  
   </p>
   <p>
     <a href="docs/eg09irl_snow.pdf">Download paper [.pdf]</a><br>
-    <a href="docs/eg09irl_snow_pres.pdf">Download presentation [.pdf]</a> <b>Best presentation award!</b><br>
+    <a href="docs/eg09irl_snow_pres.pdf">Download presentation [.pdf]</a> <i>Best presentation award!</i><br>
   </p>
 
   <style>
