--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     My master thesis focused on modeling snow buildup using implicit surfaces (more specifically level sets) by allowing snow to fall in a wind field. Level sets are propagated according to snow particle collisions, with constraints to mimic realistic buildup.
   </p>
   <p>
-    <a href="docs/tommyfinalthesis.pdf">Download thesis [.pdf]</a><br>
+    <a href="docs/tommyfinalthesis.pdf">thesis [.pdf]</a>
   </p>  
   <h3>Abstract</h3>
   <p>
@@ -32,8 +32,7 @@
     <i>Eurographics Ireland Workshop Series</i>, Vol. 9, December 2009, Dublin, Ireland, pp. 19-26.  
   </p>
   <p>
-    <a href="docs/eg09irl_snow.pdf">Download paper [.pdf]</a><br>
-    <a href="docs/eg09irl_snow_pres.pdf">Download presentation [.pdf]</a> <i>Best presentation award!</i><br>
+    <a href="docs/eg09irl_snow.pdf">paper [.pdf]</a> | <a href="docs/eg09irl_snow_pres.pdf">presentation [.pdf]</a> <i>Best presentation award!</i>
   </p>
 
   <style>
