--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       border-radius: 6px;
     }
   </style>
+  <h3>Gallery</h3>
   <div class="gallery">
     <div>
       <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener noreferrer">
