--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <a href="https://github.com/thinks">My GitHub</a>
   </p>
 
+  <h2>Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
+  <img src="images/phd_banner2.png"
+     style="max-width:100%; height:auto;">  
+  <p>
+    My PhD studies focused on the acquisition and processing of high resolution Aerial Laser Scanning (ALS) data sets. In particular, processing task such as building extraction and modeling for urban areas were studied.
+  </p>
+  <h3>Abstract</h3>
+  <p>
+    Current Aerial Laser Scanning (ALS) technology rapidly produces large amounts of accurate point data for urban regions, making it a suitable tool for city-scale geometric modeling of buildings. However, acquisition and processing of urban ALS data remains a challenge because of the geometric complexity of urban scenes. Existing techniques have focused on geometric modeling from elevation data, ignoring details on building walls. This thesis introduces several improvements and simplifications for the acquisition and processing of ALS data: urban flight path planning, scan line analysis, visualization, building extraction, and simple and robust conversion of ALS data into solid models for further processing. By applying geometric reasoning, it is shown that certain flight paths vastly improve the point data quality on building walls. Single scan line analysis then exploits latent information in the data to insert missing echoes caused by undetected pulse reflections, and to identify building wall segments in individual scan lines. Points on building wall segments are then transferred to a digital image and complete building footprints are then extracted using innovative morphological techniques. Finally, a simple and robust method for direct conversion of point data into solid models based on volumetric subdivision rather than surface reconstruction is presented.
+  </p>
+  <p>
+    <a href="docs/thinks-thesis-single.pdf">thesis [.pdf]</a> | <a href="docs/viva_thinks.pdf">presentation [.pdf]</a>
+  </p>  
+
   <h2>Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
   <img src="images/snow_feldman3.png"
      style="max-width:100%; height:auto;">  
