--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <p>
     <a href="docs/thinks-thesis-single.pdf">thesis [.pdf]</a> | <a href="docs/viva_thinks.pdf">presentation [.pdf]</a>
   </p>  
+  <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 
   <h2>Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
   <img src="images/snow_feldman3.png"
@@ -105,5 +106,6 @@
       </a>
     </div>
   </div>
+  <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 </body>
 </html>
