--- a/index.html
+++ b/index.html
@@ -50,62 +50,44 @@
     <a href="docs/eg09irl_snow.pdf">paper [.pdf]</a> | <a href="docs/eg09irl_snow_pres.pdf">presentation [.pdf]</a> <i>Best presentation award!</i>
   </p>
 
-  <style>
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 16px;
-      max-width: 800px;
-      margin: 2rem auto;
-      text-align: center;
-      font-family: sans-serif;
-    }
-    .gallery img {
-      width: 100%;
-      max-width: 220px;
-      height: auto;
-      border-radius: 6px;
-    }
-  </style>
   <h3>Gallery</h3>
-  <div class="gallery">
-    <div>
-      <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_bunny_060420a.jpg" alt="">
-      </a>
-    </div>
+  <table style="margin:auto; border-collapse: separate; border-spacing: 20px; font-family: sans-serif;">
+    <tr>
+      <td style="text-align:center;">
+        <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener">
+          <img src="images/snow_bunny_060420a.jpg" alt="Image 1" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+      <td style="text-align:center;">
+        <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener">
+          <img src="images/snow_bunny_060420b.jpg" alt="Image 2" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+      <td style="text-align:center;">
+        <a href="images/snow_bunny_060420c.jpg" target="_blank" rel="noopener">
+          <img src="images/snow_bunny_060420c.jpg" alt="Image 3" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+    </tr>
 
-    <div>
-      <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_bunny_060420b.jpg" alt="">
-      </a>
-    </div>
-
-    <div>
-      <a href="images/snow_bunny_060420c.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_bunny_060420c.jpg" alt="">
-      </a>
-    </div>
-
-    <div>
-      <a href="images/snow_feldman.png" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_feldman.png" alt="">
-      </a>
-    </div>
-
-    <div>
-      <a href="images/snow_buddha.png" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_buddha.png" alt="">
-      </a>
-    </div>
-
-
-    <div>
-      <a href="images/snow_lantern.jpg" target="_blank" rel="noopener noreferrer">
-        <img src="images/snow_lantern.jpg" alt="">
-      </a>
-    </div>
-  </div>
+    <tr>
+      <td style="text-align:center;">
+        <a href="images/snow_feldman.png" target="_blank" rel="noopener">
+          <img src="images/snow_feldman.png" alt="Image 4" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+      <td style="text-align:center;">
+        <a href="images/snow_buddha.png" target="_blank" rel="noopener">
+          <img src="images/snow_buddha.png" alt="Image 5" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+      <td style="text-align:center;">
+        <a href="images/snow_lantern.jpg" target="_blank" rel="noopener">
+          <img src="images/snow_lantern.jpg" alt="Image 6" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+    </tr>
+  </table>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 </body>
 </html>
