--- a/index.html
+++ b/index.html
@@ -25,6 +25,34 @@
   <p>
     <a href="docs/thinks-thesis-single.pdf">thesis [.pdf]</a> | <a href="docs/viva_thinks.pdf">presentation [.pdf]</a>
   </p>  
+  <h3>Gallery</h3>
+  <table style="margin:auto; border-collapse: separate; border-spacing: 20px; font-family: sans-serif;">
+    <tr>
+      <td style="text-align:center;">
+        <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener">
+          <img src="images/phd_occlusion_full_thumb2.webp" alt="" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+      <td style="text-align:center;">
+        <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener">
+          <img src="images/phd_maxwell_hfield_thumb2.webp" alt="" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+    </tr>
+
+    <tr>
+      <td style="text-align:center;">
+        <a href="images/snow_feldman.png" target="_blank" rel="noopener">
+          <img src="images/phd_building_extraction_thumb2.webp" alt="" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+      <td style="text-align:center;">
+        <a href="images/snow_buddha.png" target="_blank" rel="noopener">
+          <img src="images/phd_fem_test_thumb1.webp" alt="" style="width:200px; height:auto; border-radius:8px;">
+        </a>
+      </td>
+    </tr>
+  </table>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 
   <h2>Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
@@ -55,17 +83,17 @@
     <tr>
       <td style="text-align:center;">
         <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_bunny_060420a.jpg" alt="Image 1" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_bunny_060420a.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_bunny_060420b.jpg" alt="Image 2" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_bunny_060420b.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_bunny_060420c.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_bunny_060420c.jpg" alt="Image 3" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_bunny_060420c.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
         </a>
       </td>
     </tr>
@@ -73,17 +101,17 @@
     <tr>
       <td style="text-align:center;">
         <a href="images/snow_feldman.png" target="_blank" rel="noopener">
-          <img src="images/snow_feldman.png" alt="Image 4" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_feldman.png" alt="" style="width:200px; height:auto; border-radius:8px;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_buddha.png" target="_blank" rel="noopener">
-          <img src="images/snow_buddha.png" alt="Image 5" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_buddha.png" alt="" style="width:200px; height:auto; border-radius:8px;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_lantern.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_lantern.jpg" alt="Image 6" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_lantern.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
         </a>
       </td>
     </tr>
