--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
   <table style="margin:auto; border-collapse: separate; border-spacing: 20px; font-family: sans-serif;">
     <tr>
       <td style="text-align:center;">
-        <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener">
+        <a href="images/phd_occlusion_full1.png" target="_blank" rel="noopener">
           <img src="images/phd_occlusion_full_thumb2.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
         </a>
       </td>
       <td style="text-align:center;">
-        <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener">
+        <a href="images/phd_maxwell_hfield2.png" target="_blank" rel="noopener">
           <img src="images/phd_maxwell_hfield_thumb2.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
         </a>
       </td>
       <td style="text-align:center;">
-        <a href="images/snow_feldman.png" target="_blank" rel="noopener">
+        <a href="images/phd_building_extraction1.pdf" target="_blank" rel="noopener">
           <img src="images/phd_building_extraction_thumb2.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
         </a>
       </td>
       <td style="text-align:center;">
-        <a href="images/snow_buddha.png" target="_blank" rel="noopener">
+        <a href="images/phd_fem_test3.png" target="_blank" rel="noopener">
           <img src="images/phd_fem_test_thumb1.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
         </a>
       </td>
