--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     Current Aerial Laser Scanning (ALS) technology rapidly produces large amounts of accurate point data for urban regions, making it a suitable tool for city-scale geometric modeling of buildings. However, acquisition and processing of urban ALS data remains a challenge because of the geometric complexity of urban scenes. Existing techniques have focused on geometric modeling from elevation data, ignoring details on building walls. This thesis introduces several improvements and simplifications for the acquisition and processing of ALS data: urban flight path planning, scan line analysis, visualization, building extraction, and simple and robust conversion of ALS data into solid models for further processing. By applying geometric reasoning, it is shown that certain flight paths vastly improve the point data quality on building walls. Single scan line analysis then exploits latent information in the data to insert missing echoes caused by undetected pulse reflections, and to identify building wall segments in individual scan lines. Points on building wall segments are then transferred to a digital image and complete building footprints are then extracted using innovative morphological techniques. Finally, a simple and robust method for direct conversion of point data into solid models based on volumetric subdivision rather than surface reconstruction is presented.
   </p>
   <p>
-    <a href="docs/thinks-thesis-single.pdf">thesis [.pdf]</a> | <a href="docs/viva_thinks.pdf">presentation [.pdf]</a>
+    <a href="docs/thinks-thesis-single.pdf" target="_blank" rel="noopener">thesis [.pdf]</a> | <a href="docs/viva_thinks.pdf" target="_blank" rel="noopener">presentation [.pdf]</a>
   </p>  
   <h3>Gallery</h3>
   <table style="margin:auto; border-collapse: separate; border-spacing: 20px; font-family: sans-serif;">
@@ -59,7 +59,7 @@
     My master thesis focused on modeling snow buildup using implicit surfaces (more specifically level sets) by allowing snow to fall in a wind field. Level sets are propagated according to snow particle collisions, with constraints to mimic realistic buildup.
   </p>
   <p>
-    <a href="docs/tommyfinalthesis.pdf">thesis [.pdf]</a>
+    <a href="docs/tommyfinalthesis.pdf" target="_blank" rel="noopener">thesis [.pdf]</a>
   </p>  
   <h3>Abstract</h3>
   <p>
@@ -72,7 +72,7 @@
     <i>Eurographics Ireland Workshop Series</i>, Vol. 9, December 2009, Dublin, Ireland, pp. 19-26.  
   </p>
   <p>
-    <a href="docs/eg09irl_snow.pdf">paper [.pdf]</a> | <a href="docs/eg09irl_snow_pres.pdf">presentation [.pdf]</a> <i>Best presentation award!</i>
+    <a href="docs/eg09irl_snow.pdf" target="_blank" rel="noopener">paper [.pdf]</a> | <a href="docs/eg09irl_snow_pres.pdf" target="_blank" rel="noopener">presentation [.pdf]</a> <i>Best presentation award!</i>
   </p>
 
   <h3>Gallery</h3>
