--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <i>Eurographics Ireland Workshop Series</i>, Vol. 9, December 2009, Dublin, Ireland, pp. 19-26.  
   </p>
   <p>
-    <a href="docs/eg09irl_snow.pdf" target="_blank" rel="noopener">paper [.pdf]</a> | <a href="docs/eg09irl_snow_pres.pdf" target="_blank" rel="noopener">presentation [.pdf]</a> <i>Best presentation award!</i>
+    <a href="docs/eg09irl_snow.pdf" target="_blank" rel="noopener">paper [.pdf]</a> | <a href="docs/eg09irl_snow_pres.pdf" target="_blank" rel="noopener">presentation [.pdf]</a> <span style="color: gold;">Best presentation award!</span>
   </p>
 
   <h3>Gallery</h3>
