--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
     <a href="docs/thinks-thesis-single.pdf" target="_blank" rel="noopener">thesis [.pdf]</a> | <a href="docs/viva_thinks.pdf" target="_blank" rel="noopener">presentation [.pdf]</a>
   </p>  
   <h3>Gallery</h3>
-  <table style="margin:auto; border-collapse: separate; border-spacing: 20px; font-family: sans-serif;">
+  <table style="margin:auto; border-collapse: separate; border-spacing: 20px;">
     <tr>
       <td style="text-align:center;">
         <a href="images/phd_occlusion_full1.png" target="_blank" rel="noopener">
-          <img src="images/phd_occlusion_full_thumb2.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
+          <img src="images/phd_occlusion_full_thumb2.webp" alt="" style="width:100px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/phd_maxwell_hfield2.png" target="_blank" rel="noopener">
-          <img src="images/phd_maxwell_hfield_thumb2.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
+          <img src="images/phd_maxwell_hfield_thumb2.webp" alt="" style="width:100px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/phd_building_extraction1.pdf" target="_blank" rel="noopener">
-          <img src="images/phd_building_extraction_thumb2.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
+          <img src="images/phd_building_extraction_thumb2.webp" alt="" style="width:100px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/phd_fem_test3.png" target="_blank" rel="noopener">
-          <img src="images/phd_fem_test_thumb1.webp" alt="" style="width:100px; height:auto; border-radius:4px;">
+          <img src="images/phd_fem_test_thumb1.webp" alt="" style="width:100px; height:auto;">
         </a>
       </td>
     </tr>
@@ -76,21 +76,21 @@
   </p>
 
   <h3>Gallery</h3>
-  <table style="margin:auto; border-collapse: separate; border-spacing: 20px; font-family: sans-serif;">
+  <table style="margin:auto; border-collapse: separate; border-spacing: 20px;">
     <tr>
       <td style="text-align:center;">
         <a href="images/snow_bunny_060420a.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_bunny_060420a.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_bunny_060420a.jpg" alt="" style="width:200px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_bunny_060420b.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_bunny_060420b.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_bunny_060420b.jpg" alt="" style="width:200px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_bunny_060420c.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_bunny_060420c.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_bunny_060420c.jpg" alt="" style="width:200px; height:auto;">
         </a>
       </td>
     </tr>
@@ -98,17 +98,17 @@
     <tr>
       <td style="text-align:center;">
         <a href="images/snow_feldman.png" target="_blank" rel="noopener">
-          <img src="images/snow_feldman.png" alt="" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_feldman.png" alt="" style="width:200px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_buddha.png" target="_blank" rel="noopener">
-          <img src="images/snow_buddha.png" alt="" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_buddha.png" alt="" style="width:200px; height:auto;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/snow_lantern.jpg" target="_blank" rel="noopener">
-          <img src="images/snow_lantern.jpg" alt="" style="width:200px; height:auto; border-radius:8px;">
+          <img src="images/snow_lantern.jpg" alt="" style="width:200px; height:auto;">
         </a>
       </td>
     </tr>
