--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="https://github.com/thinks">My GitHub</a>
   </p>
 
-  <h2>Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
+  <h2>PhD - Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
   <img src="images/phd_banner2.png"
      style="max-width:100%; height:auto;">  
   <p>
@@ -52,7 +52,7 @@
   </table>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 
-  <h2>Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
+  <h2>MSc - Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
   <img src="images/snow_feldman3.png"
      style="max-width:100%; height:auto;">  
   <p>
