--- a/index.html
+++ b/index.html
@@ -114,5 +114,14 @@
     </tr>
   </table>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
+
+  <h2>Peer-reviewed Publications</h2>
+  <p>
+    ”Visualisation of urban airborne laser scanning data with occlusion images”,
+    <b>T. Hinks</b>, H. Carr, H. Gharibi, D. Laefer,
+    <i>ISPRS Journal of Photogrammetry and Remote Sensing</i>, Vol. 104, June 2015, pp. 77-87. <a href="http://dx.doi.org/10.1016/j.isprsjprs.2015.01.014" target="_blank" rel="noopener">DOI</a>
+  </p>
+
+
 </body>
 </html>
