--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="https://github.com/thinks">My GitHub</a>
   </p>
 
-  <h2>PhD - Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
+  <h2>PhD<br>Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
   <img src="images/phd_banner2.png"
      style="max-width:100%; height:auto;">  
   <p>
@@ -52,7 +52,7 @@
   </table>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 
-  <h2>MSc - Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
+  <h2>MSc<br>Animating Wind-Driven Snow Build-up Using an Implicit Approach</h2>
   <img src="images/snow_feldman3.png"
      style="max-width:100%; height:auto;">  
   <p>
@@ -117,9 +117,14 @@
 
   <h2>Peer-reviewed Publications</h2>
   <p>
-    ”Visualisation of urban airborne laser scanning data with occlusion images”,
-    <b>T. Hinks</b>, H. Carr, H. Gharibi, D. Laefer,
+    ”Visualisation of urban airborne laser scanning data with occlusion images”,<br>
+    <b>T. Hinks</b>, H. Carr, H. Gharibi, D. Laefer,<br>
     <i>ISPRS Journal of Photogrammetry and Remote Sensing</i>, Vol. 104, June 2015, pp. 77-87. <a href="http://dx.doi.org/10.1016/j.isprsjprs.2015.01.014" target="_blank" rel="noopener">DOI</a>
+  </p>
+  <p>
+    ”Point Cloud Data Conversion into Solid Models via Point-Based Voxelization”,<br>
+    <b>T. Hinks</b>, H. Carr, L. Truong-Hong, D. Laefer,<br>
+    <i>J. Surv. Eng.</i>, Vol. 139, No. 2, May 2013, pp. 72-83. <a href="http://dx.doi.org/10.1061/(ASCE)SU.1943-5428.0000097" target="_blank" rel="noopener">DOI</a>
   </p>
 
 
