--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
     <a href="https://github.com/thinks">My GitHub</a>
   </p>
 
+  <h2>Peer-reviewed Publications</h2>
+  <ul>
+    <li>
+      <p>
+        ”Visualisation of urban airborne laser scanning data with occlusion images”,<br>
+        <b>T. Hinks</b>, H. Carr, H. Gharibi, D. Laefer,<br>
+        <i>ISPRS Journal of Photogrammetry and Remote Sensing</i>, Vol. 104, June 2015, pp. 77-87. <a href="http://dx.doi.org/10.1016/j.isprsjprs.2015.01.014" target="_blank" rel="noopener">DOI</a>
+      </p>
+    </li>
+    <li>
+      <p>
+        ”Point Cloud Data Conversion into Solid Models via Point-Based Voxelization”,<br>
+        <b>T. Hinks</b>, H. Carr, L. Truong-Hong, D. Laefer,<br>
+        <i>J. Surv. Eng.</i>, Vol. 139, No. 2, May 2013, pp. 72-83. <a href="http://dx.doi.org/10.1061/(ASCE)SU.1943-5428.0000097" target="_blank" rel="noopener">DOI</a>
+      </p>
+    </li>
+    <li>
+      <p>
+        “Combining an Angle Criterion with Voxelization and the Flying Voxel Method in Reconstructing Building Models from LiDAR Data”,<br>
+        L. Truong-Hong, D.F. Laefer, <b>T. Hinks</b>, H. Carr,<br>
+        <i>Computer-Aided Civil and Infrastructure Engineering</i>, Vol. 28, No. 2, February 2013, pp. 112-129. <a href="http://dx.doi.org/10.1111/j.1467-8667.2012.00761.x" target="_blank" rel="noopener">DOI</a>
+      </p>
+    </li>
+    <li>
+      <p>
+        “Flying Voxel Method with Delaunay Triangulation Criterion For Façade/Feature Detection For Computation”,<br>
+        L. Truong-Hong, D. Laefer, <b>T. Hinks</b>, H. Carr,<br>
+        <i>J. of Computing in Civil Eng.</i>, ASCE. <a href="http://dx.doi.org/10.1061/(ASCE)CP.1943-5487.0000188" target="_blank" rel="noopener">DOI</a>
+      </p>
+    </li>
+  </ul>
+
   <h2>PhD<br>Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
   <img src="images/phd_banner2.png"
      style="max-width:100%; height:auto;">  
@@ -114,32 +146,6 @@
     </tr>
   </table>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
-
-  <h2>Peer-reviewed Publications</h2>
-  <ul>
-    <li>
-      <p>
-        ”Visualisation of urban airborne laser scanning data with occlusion images”,<br>
-        <b>T. Hinks</b>, H. Carr, H. Gharibi, D. Laefer,<br>
-        <i>ISPRS Journal of Photogrammetry and Remote Sensing</i>, Vol. 104, June 2015, pp. 77-87. <a href="http://dx.doi.org/10.1016/j.isprsjprs.2015.01.014" target="_blank" rel="noopener">DOI</a>
-      </p>
-    </li>
-    <li>
-      <p>
-        ”Point Cloud Data Conversion into Solid Models via Point-Based Voxelization”,<br>
-        <b>T. Hinks</b>, H. Carr, L. Truong-Hong, D. Laefer,<br>
-        <i>J. Surv. Eng.</i>, Vol. 139, No. 2, May 2013, pp. 72-83. <a href="http://dx.doi.org/10.1061/(ASCE)SU.1943-5428.0000097" target="_blank" rel="noopener">DOI</a>
-      </p>
-    </li>
-    <li>
-      <p>
-        “Combining an Angle Criterion with Voxelization and the Flying Voxel Method in Reconstructing Building Models from LiDAR Data”,<br>
-        L. Truong-Hong, D.F. Laefer, <b>T. Hinks</b>, H. Carr,<br>
-        <i>Computer-Aided Civil and Infrastructure Engineering</i>, Vol. 28, No. 2, February 2013, pp. 112-129. <a href="http://dx.doi.org/10.1111/j.1467-8667.2012.00761.x" target="_blank" rel="noopener">DOI</a>
-      </p>
-    </li>
-  </ul>
-
 
 </body>
 </html>
