--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
         <i>J. of Computing in Civil Eng.</i>, ASCE. <a href="http://dx.doi.org/10.1061/(ASCE)CP.1943-5487.0000188" target="_blank" rel="noopener">DOI</a>
       </p>
     </li>
+    <li>
+      <p>
+        “New Advances in Automated Urban Modelling from Airborne Laser Scanning Data”,<br>
+        D.F. Laefer, <b>T. Hinks</b>, H. Carr, L. Truong-Hong,<br>
+        <i>Recent Patents on Engineering</i>, Bentham Science Publishers, Vol. 5, No. 3, December 2011, pp. 196-208. <a href="http://dx.doi.org/10.2174/187221211797636890" target="_blank" rel="noopener">DOI</a>
+      </p>
+    </li>
   </ul>
+  <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
 
   <h2>PhD<br>Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
   <img src="images/phd_banner2.png"
