--- a/index.html
+++ b/index.html
@@ -306,17 +306,17 @@
     <tr>
       <td style="text-align:center;">
         <a href="images/ghost1.png" target="_blank" rel="noopener">
-          <img src="images/ghost1.png" alt="" style="width:200px; height:auto;">
+          <img src="images/ghost1.png" alt="" style="width:auto; height:200px;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/ghost2.png" target="_blank" rel="noopener">
-          <img src="images/ghost2.png" alt="" style="width:200px; height:auto;">
+          <img src="images/ghost2.png" alt="" style="width:auto; height:200px;">
         </a>
       </td>
       <td style="text-align:center;">
         <a href="images/ghost3.png" target="_blank" rel="noopener">
-          <img src="images/ghost3.png" alt="" style="width:200px; height:auto;">
+          <img src="images/ghost3.png" alt="" style="width:auto; height:200px;">
         </a>
       </td>
     </tr>
