--- a/index.html
+++ b/index.html
@@ -5,14 +5,31 @@
   <title>Tommy Hinks - Making numbers count</title>
 </head>
 <body style="font-family:sans-serif; max-width:800px; margin:3rem auto;">
-  <h1>Hello</h1>
-  <p>This is my GitHub Pages site.</p>
+  <h1>Tommy Hinks - Making numbers count</h1>
+  <p>This page lists past and ongoing projects.</p>
 
+  <h2>GitHub Repositories</h2>
   <p>
-    <a href="https://github.com/thinks">My GitHub</a>
+    For a complete list of GitHub repositories refer to my <a href="https://github.com/thinks" target="_blank" rel="noopener">GitHub profile</a>. 
   </p>
+  <ul>
+    <li>
+      <a href="https://github.com/thinks/tph_poisson" target="_blank" rel="noopener">tph_poisson</a>
+    </li>
+    <li>
+      <a href="https://github.com/thinks/fast-marching-method" target="_blank" rel="noopener">fast-marching-method</a>
+    </li>
+    <li>
+      <a href="https://github.com/thinks/platonic-solids" target="_blank" rel="noopener">platonic-solids</a>
+    </li>
+    <li>
+      <a href="https://github.com/thinks/obj-io" target="_blank" rel="noopener">obj-io</a>
+    </li>
+    <li>
+      <a href="https://github.com/thinks/pnm-io" target="_blank" rel="noopener">pnm-io</a>
+    </li>
+  </ul>
   <hr style="border:none; border-top:1px solid #ccc; margin:2rem 0;">
-
 
   <h2>PhD<br>Geometric Processing Techniques for Urban Aerial Laser Scan Data</h2>
   <img src="images/phd_banner2.png"
